--- a/app/src/main/res/layout/activity_pantalla_votaciones_peliculas.xml
+++ b/app/src/main/res/layout/activity_pantalla_votaciones_peliculas.xml
@@ -1,224 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <View
-        android:id="@+id/fondovotaciones"
+        android:id="@+id/fondo_votacion_pelicula"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:background="@color/rosabebe"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/votaciones"
+        android:id="@+id/votacion_peliculas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Votaciones"
+        android:layout_marginTop="20dp"
+        android:text="Votación Películas"
         android:textColor="@color/blanco"
-        android:textSize="35sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/boton_ir_pantalla_principal_votacion_peliculas"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:background="@drawable/boton_pantalla_principal"
+        android:contentDescription="@string/boton_para_ir_a_la_pantalla_principal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="80dp"
-        android:src="@drawable/buton_listo2"
+        android:id="@+id/boton_volver_atras_votacion_peliculas"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/boton_volver_atras"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/scrollvotaciones"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fondovotaciones">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/parent2"
+        app:layout_constraintTop_toBottomOf="@+id/fondo_votacion_pelicula">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
-            <ImageView
-                android:id="@+id/like"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_like"
-                android:layout_marginTop="70dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@id/parent2"
-                />
-            <ImageView
-                android:id="@+id/dislike"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_dislike"
-                android:layout_marginTop="30dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/like"
-                />
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/titulopelicula"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="15dp"
-                android:text="@string/gran_turismo"
-                android:textSize="25sp"
-                app:layout_constraintTop_toTopOf="@id/parent2"
-                app:layout_constraintLeft_toLeftOf="@id/parent2"
-                app:layout_constraintRight_toRightOf="@id/parent2"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pantalla_votacion_pelicula_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_votacion_pelicula">
 
-            <TextView
-                android:id="@+id/text_saved_data"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="15dp"
-                app:layout_constraintTop_toBottomOf="@id/titulopelicula"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/like"
-                android:background="@drawable/stroke"
+            </androidx.recyclerview.widget.RecyclerView>
 
-                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
 
-            <TextView
-                android:id="@+id/text_saved_data2"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/stroke"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/dislike"
-                app:layout_constraintTop_toBottomOf="@id/text_saved_data" />
+        </LinearLayout>
 
-
-            <TextView
-                android:id="@+id/titulopelicula2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="144dp"
-                android:text="Dune"
-                android:textSize="25sp"
-                app:layout_constraintLeft_toLefttOf="@id/parent2"
-                app:layout_constraintRight_toRightOf="@id/parent2"
-
-                app:layout_constraintTop_toBottomOf="@id/text_saved_data2" />
-
-            <ImageView
-                android:id="@+id/like1"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_like"
-                android:layout_marginTop="70dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/dislike"
-                />
-            <ImageView
-                android:id="@+id/dislike1"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_dislike"
-                android:layout_marginTop="30dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/like1"
-                />
-
-
-
-            <TextView
-                android:id="@+id/text_saved_data3"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/titulopelicula2"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/like"
-                android:background="@drawable/stroke"
-
-                />
-
-            <TextView
-                android:id="@+id/text_saved_data4"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="34dp"
-                android:background="@drawable/stroke"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/dislike"
-                app:layout_constraintTop_toBottomOf="@id/text_saved_data3" />
-
-
-
-
-
-            <TextView
-                android:id="@+id/titulopelicula3"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:text="Titanic"
-                android:layout_marginRight="130dp"
-                android:textSize="25sp"
-                app:layout_constraintTop_toBottomOf="@id/text_saved_data4"
-                app:layout_constraintLeft_toLefttOf="@id/parent2"
-                app:layout_constraintRight_toRightOf="@id/parent2" />
-
-            <ImageView
-                android:id="@+id/like2"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_like"
-                android:layout_marginTop="70dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/dislike1"
-                />
-            <ImageView
-                android:id="@+id/dislike3"
-                android:layout_width="90dp"
-                android:layout_height="50dp"
-                android:src="@drawable/boton_dislike"
-                android:layout_marginTop="30dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/like2"
-                />
-
-
-
-            <TextView
-                android:id="@+id/text_saved_data5"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/titulopelicula3"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/like2"
-                android:background="@drawable/stroke"
-
-                />
-
-            <TextView
-                android:id="@+id/text_saved_data6"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="34dp"
-                android:background="@drawable/stroke"
-                android:hint="Numero de votaciones"
-                app:layout_constraintLeft_toRightOf="@id/dislike3"
-                app:layout_constraintTop_toBottomOf="@id/text_saved_data5" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
